--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "npx playwright test --reporter=html",
+    "start": "npx playwright test",
     "report": "npx playwright show-report",
     "testear": "cucumber-js test"
   },
@@ -17,6 +17,9 @@
     "@types/node": "^25.0.3",
     "playwright": "^1.57.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
+    "genson-js": "^0.0.8"
   }
 }
